[gd_scene load_steps=8 format=3 uid="uid://dxik2aq074jdx"]

[ext_resource type="Script" path="res://addons/dev_console/Autoloads/console_manager.gd" id="1_2p1ik"]
[ext_resource type="Script" path="res://addons/dev_console/UI Scripts/dev_console.gd" id="2_kduqy"]
[ext_resource type="PackedScene" uid="uid://buv4pxp6kq757" path="res://addons/dev_console/Commands/Help/help.tscn" id="3_3h6n7"]
[ext_resource type="PackedScene" uid="uid://neygdh4iwk68" path="res://addons/dev_console/Commands/Echo/echo.tscn" id="4_ssltb"]
[ext_resource type="PackedScene" uid="uid://hyvd61h21pbk" path="res://addons/dev_console/Commands/Clear/clear.tscn" id="5_6i0db"]
[ext_resource type="PackedScene" uid="uid://b8w5gqiucjntu" path="res://addons/dev_console/Commands/Exit/exit.tscn" id="6_blhnl"]
[ext_resource type="PackedScene" uid="uid://d3x22jmaq4fl6" path="res://addons/dev_console/Commands/Quit/quit.tscn" id="7_to7r3"]

[node name="ConsoleManager" type="Node"]
script = ExtResource("1_2p1ik")

[node name="ConsoleCanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="ConsoleCanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.247059, 0.247059, 0.247059, 0.392157)

[node name="DevConsole" type="Control" parent="ConsoleCanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_kduqy")

[node name="MarginContainer" type="MarginContainer" parent="ConsoleCanvasLayer/DevConsole"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="OuterPanel" type="PanelContainer" parent="ConsoleCanvasLayer/DevConsole/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ConsoleCanvasLayer/DevConsole/MarginContainer/OuterPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ConsoleCanvasLayer/DevConsole/MarginContainer/OuterPanel/MarginContainer"]
layout_mode = 2

[node name="CommandHistory" type="ScrollContainer" parent="ConsoleCanvasLayer/DevConsole/MarginContainer/OuterPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="Panel" type="Panel" parent="ConsoleCanvasLayer/DevConsole/MarginContainer/OuterPanel/MarginContainer/VBoxContainer/CommandHistory"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="ConsoleCanvasLayer/DevConsole/MarginContainer/OuterPanel/MarginContainer/VBoxContainer/CommandHistory/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="OutputText" type="RichTextLabel" parent="ConsoleCanvasLayer/DevConsole/MarginContainer/OuterPanel/MarginContainer/VBoxContainer/CommandHistory/Panel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 2
scroll_following = true
selection_enabled = true

[node name="InputPanel" type="Panel" parent="ConsoleCanvasLayer/DevConsole/MarginContainer/OuterPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ConsoleCanvasLayer/DevConsole/MarginContainer/OuterPanel/MarginContainer/VBoxContainer/InputPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextEntry" type="LineEdit" parent="ConsoleCanvasLayer/DevConsole/MarginContainer/OuterPanel/MarginContainer/VBoxContainer/InputPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "enter a command here"
clear_button_enabled = true

[node name="SubmitButton" type="Button" parent="ConsoleCanvasLayer/DevConsole/MarginContainer/OuterPanel/MarginContainer/VBoxContainer/InputPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Submit"

[node name="PromptLayer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PromptLayer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -114.0
offset_top = 39.0
offset_right = 115.0
offset_bottom = 64.0
grow_horizontal = 2
text = "Press Shift+` to open Console"

[node name="Commands" type="Node" parent="."]
unique_name_in_owner = true

[node name="Help" parent="Commands" instance=ExtResource("3_3h6n7")]
help_text = "Well... it seems like you already know how to use this command. Help displays the list of available commands and what their functions are."

[node name="Echo" parent="Commands" instance=ExtResource("4_ssltb")]
help_text = "Repeats whatever text inputted after `echo` back to the console."
help_text_short = "Repeats <arg> text."

[node name="Clear" parent="Commands" instance=ExtResource("5_6i0db")]

[node name="Exit" parent="Commands" instance=ExtResource("6_blhnl")]
command = "exit"
help_text = "Closes the console. Type 'exit' to return to preview menu or game."
help_text_short = "Closes the console."

[node name="Quit" parent="Commands" instance=ExtResource("7_to7r3")]
command = "quit"
help_text = "Type 'quit' to close the application."
help_text_short = "Closes the application."
